k8s/comment-ws-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-ws-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      component: comment-ws
  template:
    metadata:
      labels:
        component: comment-ws
    spec:
      containers:
      - name: comment-ws
        image: dariofrongillo/comment-ws:2.0.1
        ports:
        - containerPort: 8081
