k8s/mysql-post-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-post-db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: mysql-post
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        component: mysql-post
    spec:
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
              claimName: mysql-pv-claim-post-ws
      containers:
      - name: mysql
        image: mysql:5.6
        ports:
        - containerPort: 3306
        volumeMounts:
          - name: mysql-persistent-storage
            mountPath: /var/lib/mysql
