k8s/post-ws-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-ws-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: post-ws
  template:
    metadata:
      labels:
        component: post-ws
    spec:
      containers:
      - name: post-ws
        image: dariofrongillo/post-ws:2.0.0
        ports:
        - containerPort: 8080
