k8s/zipkin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin-ws-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: zipkin
  template:
    metadata:
      labels:
        component: zipkin
    spec:
      containers:
      - name: zipkin
        image: openzipkin/zipkin
        ports:
        - containerPort: 9411
