k8s/comment-ws-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comment-ws-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: comment-ws
  ports:
  - port: 8081
    targetPort: 8081
