k8s/mysql-comment-db-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-comment-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: mysql-comment
  ports:
  - port: 3306
    targetPort: 3306
