k8s/mysql-post-db-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-post-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: mysql-post
  ports:
  - port: 3306
    targetPort: 3306
