k8s/post-ws-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: post-ws-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: post-ws
  ports:
  - port: 8080
    targetPort: 8080
