k8s/zipkin-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zipkin-cluster-ip-service
spec:
  type: NodePort
  selector:
    component: zipkin
  ports:
  - port: 9411
    targetPort: 9411
    nodePort: 32766
